--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,11 +46,14 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     //ChaiPort SDK
-    implementation 'com.github.iamport-intl:chaipay-android-native-sdk:V3.0.11'
+    implementation 'com.github.iamport-intl:chaipay-android-native-sdk:V3.0.12'
 
     //jwt token generation
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
     //Signature Hash
     implementation group: 'com.google.guava', name: 'guava', version: '29.0-jre'
+
+    implementation 'com.google.code.gson:gson:2.8.9'
+
 }
