Updated with the latest version

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
 
                 <data
                     android:host="checkout"
-                    android:scheme="chaipay" />
+                    android:scheme="portone" />
             </intent-filter>
         </activity>
     </application>
